test/fail/enhanced-migration/enh-mig-test2/m3.mo
module {
    // Change a to float.
    public func migration(_ : { a : Text }) : { a : Float } { { a = 5.5 } };
};
